--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "hax-editable",
   "main": "hax-editable.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0"
+    "polymer": "Polymer/polymer#^1.4.0",
+    "iron-component-page": "^1.1.8"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
